syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Protos/get_by_domain_request.proto";

option csharp_namespace = "BrassLoon.Interface.Authorization.Protos";

service SigningKeyService {
	rpc GetByDomain(GetByDomainRequest) returns (stream SigningKey);
    rpc Create(SigningKey) returns (SigningKey);
    rpc Update(SigningKey) returns (SigningKey);
}

message SigningKey {
    string SigningKeyId = 1;
    string DomainId = 2;
    google.protobuf.BoolValue IsActive = 3;
    google.protobuf.Timestamp CreateTimestamp = 4;
    google.protobuf.Timestamp UpdateTimestamp = 5;
}